@@ -70,6 +70,7 @@ def generate(env):
     SCons.Tool.tex.generate_common(env)
 
 def exists(env):
+    SCons.Tool.tex.generate_darwin(env)
     return env.Detect('latex')
 
 # Local Variables:
