@@ -50,7 +50,7 @@ test.subdir('sub')
 
 test.write('SConstruct', """\
 import os
-env = Environment(TOOLS = ['tex', 'pdftex'], ENV = {'PATH' : os.environ['PATH']})
+env = Environment(TOOLS = ['tex', 'pdftex'])
 env.PDF( 'sub/x.tex' )
 env.DVI( 'sub/x.tex' )
 """)
