@@ -185,6 +185,9 @@ RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
     - Added support for the bibunits package so we call bibtex on all
       the bu*.aux files.
+      
+    - Add support of finding path information on OSX for TeX applications
+      MacPorts and Fink paths need to be added by the user
 
   From Russel Winder:
 
